styles.css
* {
	margin: 0px;
	padding: 0px;
	box-sizing: border-box;
	/*border: 1px solid black;*/
}

html {
	font-family: 'Raleway', monospace, sans-serif;
	font-size: 10px;
}

header {
	width: 75%;
	display: flex;
	text-align: center;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	padding: 1rem;
}

header > h1 {
	font-size: 5rem;
	font-weight: 300;
	padding: 1rem;
}

header > p {
	font-size: 1.5rem;
	padding-bottom: 1rem;
}

body {
	height: 100vh;
	width: 100vw;
	background-color: #FAD7A0;
	display: flex;
	flex-direction: column;
	align-items: center;
}

main {
	height: 50%;
	width: 50%;
	border: 2px solid grey;
	border-radius: 5px;
	display: flex;
}

.column {
	border: 1px solid black;
}

#income {
	height: 100%;
	width: 20%;
}

#categories {
	height: 100%;
	width: 40%;
}

#expense {
	height: 100%;
	width: 40%;
}

